implemented study html,css,img,etc

--- a/index.html
+++ b/index.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTTP web server</title>
+    <title>Basic Website</title>
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/home.css">
     <script src="index.js" defer></script>
 </head>
-<body>
-    <h1>This is a test</h1>
+
+<body class="container full-height-grow">
+    <header class="main-header">                                                                  
+        <a href="index.html" class="brand-logo">                                                     
+            <img class="logo-resize" src="" alt="">
+            <div class="brand-logo-name">DevSite</div>
+        </a>
+        <a href="#" class="toggle-button">                                                                                    
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <nav class="main-nav">                                                                        
+            <ul>                                                                                 
+                <li>
+                    <a href="about.html">About</a>
+                </li>                                                                           
+                <li>
+                    <a href="services.html">Services</a>
+                </li>                                                                           
+            </ul>
+        </nav>
+
+    </header>
+
+
+    <section class="home-main-section">
+        <div class="img-wrapper">
+            <div class="device-image"></div>
+        </div>
+        <div class="call-to-action">
+            <h1 class="title">Web Server <span class="accent-text">Study</span></h1>                                                             
+            <span class="subtitle">An fascinating exploration of web servers using node and express.</span>      
+            <a href="about.html" class="btn">Discover</a>                                                              
+        </div>
+    </section>
+    <div class="home-page-circle-1"></div>
+    <div class="home-page-circle-2"></div>
+<div class="home-page-circle-3"></div>
+
+
+
+
+
 </body>
 </html>
