--- a/discover.html
+++ b/discover.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>WebDev Server Study | Home</title>
+    <title>WebDev Server Study | Discover</title>
     <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/discover.css">
     <script src="index.js" defer></script>
 </head>
 
@@ -24,7 +24,7 @@
         <nav class="main-nav">                                                                        
             <ul>                                                                                 
                 <li>
-                    <a href="discover.html">Discover</a>
+                    <a href="about.html">About</a>
                 </li>                                                                           
                 <li>
                     <a href="services.html">Services</a>
@@ -45,13 +45,6 @@
             <a href="about.html" class="btn">Discover</a>                                                              
         </div>
     </section>
-    <div class="home-page-circle-1"></div>
-    <div class="home-page-circle-2"></div>
-<div class="home-page-circle-3"></div>
-
-
-
-
 
 </body>
 </html>
