updated html/css, page.css added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="call-to-action">
             <h1 class="title">Web Server <span class="accent-text">Study</span></h1>                                                             
             <span class="subtitle">Explore the world of web servers using node and express with DevSite.</span>      
-            <a href="about.html" class="btn">Discover</a>                                                              
+            <a href="discover.html" class="btn">Discover</a>                                                              
         </div>
     </section>
     <div class="home-page-circle-1"></div>
