--- a/discover.html
+++ b/discover.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>WebDev Server Study | Discover</title>
     <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/discover.css">
+    <link rel="stylesheet" href="/css/page.css">
     <script src="index.js" defer></script>
 </head>
 
@@ -24,27 +24,23 @@
         <nav class="main-nav">                                                                        
             <ul>                                                                                 
                 <li>
-                    <a href="about.html">About</a>
+                    <a href="discover.html">Discover</a>
                 </li>                                                                           
                 <li>
                     <a href="services.html">Services</a>
                 </li>                                                                           
             </ul>
         </nav>
-
     </header>
 
-
-    <section class="home-main-section">
-        <div class="img-wrapper">
-            <div class="device-image"></div>
-        </div>
-        <div class="call-to-action">
-            <h1 class="title">Web Server <span class="accent-text">Study</span></h1>                                                             
-            <span class="subtitle">Explore the world of web servers using node and express with DevSite.</span>      
-            <a href="about.html" class="btn">Discover</a>                                                              
-        </div>
-    </section>
+    <section class="page-main-section">                                              
+        <div class="call-to-action">                                                  
+            <h1 class="title">This is the <span class="accent-text">Discover</span> Page</h1>
+            <div class="page-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  orem ipsum dolor sit amet, consectetur adipiscing elit.</div>     
+        </div>                                                              
+        <img class="page-img" src="">                         
+    </section>      
+</div> 
 
 </body>
 </html>
