adjusted html, added contact

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>WebDev Server Study | Services</title>
+    <title>WebDev Server Study |Contact</title>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/page.css">
+    <link rel="stylesheet" href="/css/contact.css">
     <script src="index.js" defer></script>
 </head>
 
@@ -31,19 +32,39 @@
                 </li> 
                 <li>
                     <a href="contact.html">Contact</a>
-                </li>                                                                            
+                </li>                                                                           
             </ul>
         </nav>
     </header>
 
-    <section class="page-main-section">                                              
-        <div class="call-to-action">                                                  
-            <h1 class="title">The <span class="accent-text">Services</span> Page</h1>
-            <div class="page-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  orem ipsum dolor sit amet, consectetur adipiscing elit.</div>     
-        </div>                                                              
-        <img class="page-img" src="">                         
-    </section>      
- 
+
+    <section class="contact-main-section">                                                       
+        <h1 class="contact-text">                                                                 
+            The        
+            <span class="accent-text">Contact</span>  
+            Page                                      
+        </h1>
+        <form class="contact-form">
+            <div class="input-group">
+                <label>Name:</label>
+                <input type="text" >
+            </div>
+            <div class="input-group">
+                <label>Email:</label>
+                <input type="email" >
+            </div>
+            <div class="input-group">
+                <label>Password:</label>
+                <input type="text" >
+            </div>
+            <div class="input-group">
+                <button type="submit" class="btn">Send Away!</button>
+            </div>
+        </form>
+    </section>
+</div>    
+
+
 
 </body>
 </html>
