--- a/discover.html
+++ b/discover.html
@@ -28,19 +28,22 @@
                 </li>                                                                           
                 <li>
                     <a href="services.html">Services</a>
-                </li>                                                                           
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>                                                                             
             </ul>
         </nav>
     </header>
 
     <section class="page-main-section">                                              
         <div class="call-to-action">                                                  
-            <h1 class="title">This is the <span class="accent-text">Discover</span> Page</h1>
+            <h1 class="title">The <span class="accent-text">Discover</span> Page</h1>
             <div class="page-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  orem ipsum dolor sit amet, consectetur adipiscing elit.</div>     
         </div>                                                              
         <img class="page-img" src="">                         
     </section>      
-</div> 
+
 
 </body>
 </html>
