--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
                 </li>                                                                           
                 <li>
                     <a href="services.html">Services</a>
-                </li>                                                                           
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>                                                                             
             </ul>
         </nav>
 
